--- a/SyncStatesTwo.yml
+++ b/SyncStatesTwo.yml
@@ -24,7 +24,7 @@ blueprint:
       selector:
         entity: {}
   source_url: https://github.com/johanschelin/ha_blueprints/edit/main/SyncStatesTwo.yml
-mode: restart
+mode: queued
 max_exceeded: silent
 variables:
   switch_1: !input 'switch_1'
