--- a/SyncStatesTwo.yml
+++ b/SyncStatesTwo.yml
@@ -24,7 +24,7 @@ blueprint:
       selector:
         entity: {}
   source_url: https://github.com/johanschelin/ha_blueprints/edit/main/SyncStatesTwo.yml
-mode: queued
+mode: single
 max_exceeded: silent
 variables:
   switch_1: !input 'switch_1'
@@ -46,3 +46,4 @@ action:
 - service: homeassistant.turn_{{ trigger.to_state.state }}
   data:
     entity_id: '{% if trigger.from_state.entity_id == switch_1 %} {{ switch_2 }} {% else %} {{ switch_1 }} {% endif %}'
+- delay: 2
