--- a/WindowOpenBlueprint.yml
+++ b/WindowOpenBlueprint.yml
@@ -58,20 +58,18 @@ blueprint:
           step: 1.0
           max: 25.0
           mode: slider
-    device_identifier:
-      name: Device 1 to notify
-      description: 'The device to receive the notification; it needs to run the official  Home
-        Assistant app to receive notifications.'
+    temperature_sensor:
+      name: Outdoor Temperature Sensor
+      description: 'The outdoor temp sensor'
       selector:
         device:
-          integration: mobile_app
-    device_identifier2:
-      name: Device 2 to notify
-      description: 'The device to receive the notification; it needs to run the official  Home
-        Assistant app to receive notifications.'
+    notification_service:
+      name: Notification Platform Service
       selector:
-        device:
-          integration: mobile_app
+        text:
+          type: text
+variables:
+  var_notification_service: !input notification_service
 trigger:
 - platform: state
   entity_id: !input 'contact_sensor'
@@ -102,18 +100,12 @@ condition:
   entity_id: !input 'contact_sensor'
   state: 'on'
 - condition: numeric_state
-  entity_id: weather.idvagen
+  entity_id: !input 'temperature_sensor'
   attribute: temperature
   below: !input 'temperature'
 action:
-- device_id: !input 'device_identifier'
-  domain: mobile_app
-  type: notify
-  message: Time to close {{trigger.to_state.attributes.friendly_name}}.
-  title: Close {{trigger.to_state.attributes.friendly_name}}!
-- device_id: !input 'device_identifier2'
-  domain: mobile_app
-  type: notify
-  message: Time to close {{trigger.to_state.attributes.friendly_name}}.
-  title: Close {{trigger.to_state.attributes.friendly_name}}!
+  service: notify.{{var_notification_service}}
+  data:
+    message: Time to close {{trigger.to_state.attributes.friendly_name}}.
+    title: Close {{trigger.to_state.attributes.friendly_name}}!
 mode: single
